--- a/css/main.css
+++ b/css/main.css
@@ -914,7 +914,7 @@ pre .javascript .function {
   line-height: 36px;
   font-size: 20px;
   font-weight: normal;
-  text-shadow: 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8);
+  text-shadow: 0 0 25px rgba(255,255,255,0.8), 0 0 25px rgba(255,255,255,0.8);
 }
 .site-subtitle {
   margin-top: 10px;
